--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,14 @@ python:
   - "2.6"
   - "2.7"
 env:
-  - DJANGO_VERSION=1.3.1
-  - DJANGO_VERSION=1.4.1
-  - DJANGO_VERSION=1.4.3
+  - DJANGO_VERSION=1.3.7
+  - DJANGO_VERSION=1.4.6
+  - DJANGO_VERSION=1.5
+  - DJANGO_VERSION=1.5.2
 install:
+  - pip install coveralls coverage
   - pip install Django==$DJANGO_VERSION
   - python setup.py install
-script: python setup.py test
+script: coverage run --source=seohelper setup.py test
+after_script:
+  - coveralls
