--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
 language: python
+
 python:
-  - "2.6"
-  - "2.7"
-env:
-  - DJANGO_VERSION=1.3.7
-  - DJANGO_VERSION=1.4.6
-  - DJANGO_VERSION=1.5
-  - DJANGO_VERSION=1.5.2
+  - "3.6"
+  - "3.7"
+
 install:
-  - pip install coveralls coverage
-  - pip install Django==$DJANGO_VERSION
-  - python setup.py install
-script: coverage run --source=seohelper setup.py test
-after_script:
-  - coveralls
+  - pip install pipenv
+  - pipenv install --dev
+
+script:
+  - pipenv run tox
