--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
-envlist = py36-django{22, 3}, py37-django{22,3}
+envlist = py37-django{22,3}, py38-django{22,3}, py39-django{22,3}
 
 [travis]
 python =
-    3.6: py36-django22, py36-django3, coverage
-    3.7: py37-django22, py37-django3
+    3.7: py37-django22, py37-django3, coverage
+    3.8: py38-django22, py38-django3
+    3.9: py39-django22, py39-django3
 
 [testenv]
 commands = django-admin test
@@ -16,16 +17,22 @@ passenv =
     TRAVIS_BRANCH
     TRAVIS_JOB_ID
 
-[testenv:py36-django22]
-deps = django==2.2
-
-[testenv:py36-django3]
-deps = django
-
 [testenv:py37-django22]
 deps = django==2.2
 
 [testenv:py37-django3]
+deps = django
+
+[testenv:py38-django22]
+deps = django==2.2
+
+[testenv:py38-django3]
+deps = django
+
+[testenv:py39-django22]
+deps = django==2.2
+
+[testenv:py39-django3]
 deps = django
 
 [testenv:coverage]
@@ -35,10 +42,10 @@ commands =
 deps =
     coverage
     coveralls
-    {[testenv:py36-django22]deps}
+    {[testenv:py37-django22]deps}
 
 [testenv:migrate]
 commands =
     {envbindir}/django-admin.py migrate
 deps =
-    {[testenv:py36-django22]deps}
+    {[testenv:py37-django22]deps}
