--- a/tox.ini
+++ b/tox.ini
@@ -1,51 +1,48 @@
 [tox]
-envlist = py37-django{22,3}, py38-django{22,3}, py39-django{22,3}
-
-[travis]
-python =
-    3.7: py37-django22, py37-django3, coverage
-    3.8: py38-django22, py38-django3
-    3.9: py39-django22, py39-django3
+envlist = py37-django{22,3}, py38-django{22,3}, py39-django{22,3, 4}, py310-django{3,4}, coverage
 
 [testenv]
 commands = django-admin test
 setenv =
     DJANGO_SETTINGS_MODULE=seohelper.tests.testsettings
     PYTHONPATH={toxinidir}
-passenv =
-    TRAVIS
-    TRAVIS_BRANCH
-    TRAVIS_JOB_ID
 
 [testenv:py37-django22]
 deps = django==2.2
 
 [testenv:py37-django3]
-deps = django
+deps = django==3
 
 [testenv:py38-django22]
 deps = django==2.2
 
 [testenv:py38-django3]
-deps = django
+deps = django==3
 
 [testenv:py39-django22]
 deps = django==2.2
 
 [testenv:py39-django3]
-deps = django
+deps = django==3
+
+[testenv:py39-django4]
+deps = django==4
+
+[testenv:py310-django3]
+deps = django==3
+
+[testenv:py310-django4]
+deps = django==4
 
 [testenv:coverage]
 commands =
     coverage run --source=seohelper {envbindir}/django-admin.py test
-    coveralls
 deps =
     coverage
-    coveralls
-    {[testenv:py37-django22]deps}
+    {[testenv:py37-django3]deps}
 
 [testenv:migrate]
 commands =
     {envbindir}/django-admin.py migrate
 deps =
-    {[testenv:py37-django22]deps}
+    {[testenv:py37-django3]deps}
