--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@ lib64
 
 # Python
 .python-version
-.coverage
 
 # Installer logs
 pip-log.txt
@@ -38,3 +37,6 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+
+# Editors
+.idea
