--- a/tox.ini
+++ b/tox.ini
@@ -1,48 +1,36 @@
 [tox]
-envlist = py37-django{22,3}, py38-django{22,3}, py39-django{22,3, 4}, py310-django{3,4}, coverage
+envlist = py39-django{4}, py310-django{4}, py311-django{4}, py312-django{4}, coverage
 
 [testenv]
-commands = django-admin test
+allowlist_externals =
+    ./load_tests.py
+    django-admin
+commands = ./load_tests.py
 setenv =
     DJANGO_SETTINGS_MODULE=seohelper.tests.testsettings
     PYTHONPATH={toxinidir}
 
-[testenv:py37-django22]
-deps = django==2.2
-
-[testenv:py37-django3]
-deps = django==3
-
-[testenv:py38-django22]
-deps = django==2.2
-
-[testenv:py38-django3]
-deps = django==3
-
-[testenv:py39-django22]
-deps = django==2.2
-
-[testenv:py39-django3]
-deps = django==3
-
 [testenv:py39-django4]
 deps = django==4
-
-[testenv:py310-django3]
-deps = django==3
 
 [testenv:py310-django4]
 deps = django==4
 
+[testenv:py311-django4]
+deps = django==4
+
+[testenv:py312-django4]
+deps = django==4
+
 [testenv:coverage]
 commands =
-    coverage run --source=seohelper {envbindir}/django-admin.py test
+    coverage run --source=seohelper ./load_tests.py
 deps =
     coverage
-    {[testenv:py37-django3]deps}
+    {[testenv:py312-django4]deps}
 
 [testenv:migrate]
 commands =
-    {envbindir}/django-admin.py migrate
+    {envbindir}/django-admin migrate
 deps =
-    {[testenv:py37-django3]deps}
+    {[testenv:py312-django4]deps}
